--- a/templates/contato.html
+++ b/templates/contato.html
@@ -91,9 +91,9 @@
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center">
-                        &copy; 2025 - Quitanda Online LTDA ME<br>
-                        Rua Principal - 390, Itaitinga/Ceará<br>
-                        CNPJ 99.999.999/0001-99
+                        &copy; 2025 - Quitanda Online MEI<br>
+                        R CARLOS MARIA STEIMBERG - 471, Vila Re/SP<br>
+                        CNPJ 60.554.411/0001-50
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="/privacidade.html" class="text-decoration-none text-dark">Política de Privacidade</a><br>
@@ -103,8 +103,8 @@
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="/contato.html" class="text-decoration-none text-dark">Contato pelo Site</a><br>
-                        E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a>
-                        Telefone<a href="phone:85991311549" class="text-decoration-none text-dark">(85)99131-1549</a>
+                        E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">jotave2k04@gmail.com</a>
+                        Telefone<a href="phone:85991311549" class="text-decoration-none text-dark">(11) 94773-0542</a>
                     </div>
                 </div>
             </div>
